# automatic-differentiation

./: CMakeLists.txt  README.md
include/: ADDual.h  ADForward.h  ADTape.h  ADTemplated.h
src/: main.cpp
